[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/MenuItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://Graphics/white.png" type="Texture" id=2]
[ext_resource path="res://Fonts/MenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -101.373, -14.0516 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundImage" type="TextureRect" parent="."]
margin_right = 798.0
margin_bottom = 597.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_top = 174.667
margin_right = 795.0
margin_bottom = 234.667
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Awesome Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuOptions" type="VBoxContainer" parent="."]
margin_left = -0.145447
margin_top = 278.312
margin_right = 796.855
margin_bottom = 418.312
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="GameStart" parent="MenuOptions" instance=ExtResource( 1 )]
margin_right = 797.0
margin_bottom = 44.0
item_name = "GAME START"

[node name="Options" parent="MenuOptions" instance=ExtResource( 1 )]
margin_top = 44.0
margin_right = 797.0
margin_bottom = 88.0
item_name = "OPTIONS"

[node name="ExitGame" parent="MenuOptions" instance=ExtResource( 1 )]
margin_top = 88.0
margin_right = 797.0
margin_bottom = 132.0
item_name = "EXIT GAME"
